chore(Build): Remove unnecessary dependency: jai_imageio